# Rust-test

./: Cargo.toml  README.md
.github/workflows/: rust.yml
constant/credentials/: private.txt
constant/src/: lib.rs
credentials/: private.txt
src/: main.rs
src/aws_connection/: abstract_client_with_certificate.rs  bootstrap.rs  mod.rs
src/modbus_manager/: mod.rs  modbus_manager.rs
