[package]
name = "rust-iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full","rt-multi-thread", "sync", "macros", "net", "time"]}
reqwest = {version= "0.11.18",features = ["json"]}
serde_json = "1.0.104"
openssl = { version = "0.10.56", features = ["vendored"]}
constant={path="/home/desolated/Downloads/create_device_id/constant"}
base64 = "0.21.2"





